--- a/app/styles/_configuracoes.scss
+++ b/app/styles/_configuracoes.scss
@@ -24,13 +24,13 @@
   .controle {
     height: 100%;
     background-color: $cor-highlight;
-    padding: 100px 0 0 0;
+    padding: 0 0 0 0;
     margin: 0;
     @extend .sombra;
 
     .botao {
       text-align: center;
-      height: 80px;
+      height: 60px;
       background-color: $cor-principal;
       padding: 0;
       color: white;
@@ -45,8 +45,8 @@
 
       span {
         display: block;
-        font-size: 2em;
-        margin: 10px;
+        font-size: 1.5em;
+        margin: 4px;
       }
 
       &:hover {
