--- a/app/views/follow_up.html
+++ b/app/views/follow_up.html
@@ -10,7 +10,7 @@
     <h4>&nbsp;</h4>
     <div class="row">
       <div class="col-md-3">
-        <button class="btn btn-default botao-esticado"><span class="glyphicon glyphicon-refresh"></span> Atualizar</button>
+        <button class="btn btn-default botao-esticado" ng-click="followUp.atualizar()"><span class="glyphicon glyphicon-refresh"></span> Atualizar</button>
       </div>
 
       <div class="col-md-3">
@@ -34,7 +34,7 @@
         <div class="col-md-2">
           <h4>Atendimento</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="cdPedido" placeholder="código" keys-shortcuts enter="buscar()">
+            <input type="text" class="form-control" ng-model="followUp.filtro.atendimento" placeholder="código" keys-shortcuts enter="buscar()">
             <span class="input-group-btn">
                   <button class="btn btn-default" tabindex="-1" ng-click="cdPedido=''"><span class="glyphicon glyphicon-remove"></span></button>
                 </span>
@@ -43,7 +43,7 @@
         <div class="col-md-2">
           <h4>Orçamento</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="cdPedido" placeholder="código" keys-shortcuts enter="buscar()">
+            <input type="text" class="form-control" ng-model="followUp.filtro.pedido" placeholder="código" keys-shortcuts enter="buscar()">
             <span class="input-group-btn">
                   <button class="btn btn-default" tabindex="-1" ng-click="cdPedido=''"><span class="glyphicon glyphicon-remove"></span></button>
                 </span>
@@ -52,7 +52,7 @@
         <div class="col-xs-12 col-md-4">
           <h4>Cliente</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-value="cliente.codigo + (cliente.codigo?' - ':'') + cliente.nome" placeholder="Clique na lupa para buscar" readonly="true">
+            <input type="text" class="form-control" ng-value="followUp.filtro.cliente.nome" placeholder="Clique na lupa para buscar" readonly="true">
             <span class="input-group-btn">
                   <button class="btn btn-default" tabindex="-1" ng-click="removeCliente()"><span class="glyphicon glyphicon-remove"></span></button>
                   <button class="btn btn-default" tabindex="-1" ng-click="buscarCliente()"><span class="glyphicon glyphicon-search"></span></button>
@@ -62,7 +62,7 @@
         <div class="col-xs-12 col-md-4">
           <h4>Responsável</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-value="cliente.codigo + (cliente.codigo?' - ':'') + cliente.nome" placeholder="Clique na lupa para buscar" readonly="true">
+            <input type="text" class="form-control" ng-model="followUp.filtro.responsavel" ng-value="followUp.filtro.responsavel.nome" placeholder="Clique na lupa para buscar" readonly="true">
             <span class="input-group-btn">
                   <button class="btn btn-default" tabindex="-1" ng-click="removeCliente()"><span class="glyphicon glyphicon-remove"></span></button>
                   <button class="btn btn-default" tabindex="-1" ng-click="buscarCliente()"><span class="glyphicon glyphicon-search"></span></button>
@@ -74,21 +74,37 @@
           <select name="" class="form-control">
             <option value="">Cadastro</option>
             <option value="">Último Parecer</option>
+            <option value="">Próximo contato</option>
           </select>
         </div>
         <div class="col-md-2">
           <h4>Inicial</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
+            <input type="text" class="form-control" ng-model="followUp.filtro.dataMin" ui-mask="99/99/9999" model-view-value="true" uib-datepicker-popup="dd/MM/yyyy" show-button-bar="false" ng-model="followUp.filtro.dataMin" is-open="abertoMin">
             <span class="input-group-btn">
               <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="abertoMin = !abertoMin">
+                <span class="glyphicon glyphicon-calendar"></span>
+              </button>
             </span>
           </div>
         </div>
         <div class="col-md-2">
           <h4>Final</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
+            <input type="text" class="form-control" ng-model="followUp.filtro.dataMax" ui-mask="99/99/9999" model-view-value="true" uib-datepicker-popup="dd/MM/yyyy" show-button-bar="false" ng-model="followUp.filtro.dataMax" is-open="abertoMax">
+            <span class="input-group-btn">
+              <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="abertoMax = !abertoMax">
+                <span class="glyphicon glyphicon-calendar"></span>
+              </button>
+            </span>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <h4>Valor mínimo</h4>
+          <div class="input-group">
+            <input type="text" class="form-control" ng-model="followUp.filtro.valorMin" currency number-only model-view-value="true" keys-shortcuts enter="buscar()">
             <span class="input-group-btn">
               <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
             </span>
@@ -97,16 +113,7 @@
         <div class="col-md-2">
           <h4>Valor máximo</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="dtInicial" currency number-only model-view-value="true" keys-shortcuts enter="buscar()">
-            <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
-            </span>
-          </div>
-        </div>
-        <div class="col-md-2">
-          <h4>Valor mínimo</h4>
-          <div class="input-group">
-            <input type="text" class="form-control" ng-model="dtInicial" currency number-only model-view-value="true" keys-shortcuts enter="buscar()">
+            <input type="text" class="form-control" ng-model="followUp.filtro.valorMax" currency number-only model-view-value="true" keys-shortcuts enter="buscar()">
             <span class="input-group-btn">
               <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
             </span>
@@ -114,8 +121,8 @@
         </div>
         <div class="col-md-2">
           <h4>Status</h4>
-          <select name="" class="form-control" ng-model="filtros.status" ng-options="status.id as status.nome for status in followUp.statusArray">
-            <option value="" disabled>Selecione um status</option>
+          <select name="" class="form-control" ng-model="followUp.filtro.status" ng-options="status.id as status.nome for status in followUp.statusArray">
+            <option value="">Todos</option>
           </select>
         </div>
       </div>
@@ -126,7 +133,7 @@
         </div>
         <div class="col-sm-3 col-md-2 col-md-push-8">
           <h4>&nbsp;</h4>
-          <button class="btn btn-default btn-block"><span class="glyphicon glyphicon-refresh"></span> Atualizar</button>
+          <button class="btn btn-default btn-block" ng-click="followUp.filtrar()"><span class="glyphicon glyphicon-refresh"></span> Atualizar</button>
         </div>
       </div>
     </div>
@@ -144,6 +151,7 @@
             <th>Orçamento</th>
             <th>Cliente</th>
             <th>Responsável</th>
+            <th>Vendedor</th>
             <!--<th>Atualizado em</th>-->
             <th>Último Parecer</th>
             <th>Cadastrado em</th>
@@ -161,6 +169,7 @@
             <td data-label="Código do orçamento">{{a.pedido.codigo}}</td>
             <td data-label="Cliente">{{a.pedido.cliente.nome | truncate:35}}</td>
             <td data-label="Responsável">{{a.historico[0].responsavel.usuario || 'Não disponível'}}</td>
+            <td data-label="Vendedor">{{a.pedido.vendedor.nome || 'Não disponível'}}</td>
             <!--<td data-label="Data de atualização">{{a.dataUpdate ? (a.dataUpdate | date:'short') : 'Não disponível'}}</td>-->
             <td data-label="Data do último parecer">{{a.parecer.length ? (a.parecer[0].dataCadastro | date:'short') : 'Não disponível'}}</td>
             <td data-label="Data de cadastro">{{a.dataCadastro | date:'short'}}</td>
@@ -170,6 +179,7 @@
             <td class="hidden-xs"><a ng-href="#/atendimento/open?type=attendance&code={{a.codigo}}"><span class="glyphicon glyphicon-open-file"></span></a></td>
           </tr>
           <tr class="hidden-xs" ng-repeat="n in getNumber(followUp.pagination.max - followUp.atendimentos.length) track by $index">
+            <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
