--- a/app/views/followUpEmLote.html
+++ b/app/views/followUpEmLote.html
@@ -10,7 +10,7 @@
     <h4>&nbsp;</h4>
     <div class="row">
       <div class="col-xs-3">
-        <button class="btn btn-default btn-block"><span class="glyphicon glyphicon-refresh"></span> Atualizar</button>
+        <button class="btn btn-default btn-block" ng-click="emLote.atualizar()"><span class="glyphicon glyphicon-refresh"></span> Atualizar</button>
       </div>
       <div class="col-md-3 col-md-push-6">
         <button class="btn btn-default botao-esticado" ng-click="showFiltros = !showFiltros" data-toggle="modal" data-target="#modalFiltros"><span class="glyphicon glyphicon-search"></span> Filtrar</button>
@@ -21,99 +21,87 @@
     <div class="col-xs-12 well" uib-collapse="!showFiltros">
       <div class="row condensar-rows">
         <div class="col-md-2">
-          <h4>Atendimento</h4>
-          <div class="input-group">
-            <input type="text" class="form-control" ng-model="cdPedido" placeholder="código" keys-shortcuts enter="buscar()">
-            <span class="input-group-btn">
-                  <button class="btn btn-default" tabindex="-1" ng-click="cdPedido=''"><span class="glyphicon glyphicon-remove"></span></button>
-                </span>
-          </div>
-        </div>
-        <div class="col-md-2">
           <h4>Orçamento</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="cdPedido" placeholder="código" keys-shortcuts enter="buscar()">
+            <input type="text" class="form-control" ng-model="emLote.filtro.pedido" placeholder="código">
             <span class="input-group-btn">
-                  <button class="btn btn-default" tabindex="-1" ng-click="cdPedido=''"><span class="glyphicon glyphicon-remove"></span></button>
-                </span>
+              <button class="btn btn-default" tabindex="-1" ng-click="emLote.filtro.pedido = null"><span class="glyphicon glyphicon-remove"></span></button>
+            </span>
           </div>
         </div>
         <div class="col-xs-12 col-md-4">
           <h4>Cliente</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-value="cliente.codigo + (cliente.codigo?' - ':'') + cliente.nome" placeholder="Clique na lupa para buscar" readonly="true">
+            <input type="text" class="form-control" ng-value="emLote.filtro.cliente.nome" placeholder="Clique na lupa para buscar" readonly="true">
             <span class="input-group-btn">
-                  <button class="btn btn-default" tabindex="-1" ng-click="removeCliente()"><span class="glyphicon glyphicon-remove"></span></button>
-                  <button class="btn btn-default" tabindex="-1" ng-click="buscarCliente()"><span class="glyphicon glyphicon-search"></span></button>
-                </span>
-          </div>
+              <button class="btn btn-default" tabindex="-1" ng-click="removeCliente()"><span class="glyphicon glyphicon-remove"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="buscarCliente()"><span class="glyphicon glyphicon-search"></span></button>
+            </span>
+        </div>
         </div>
         <div class="col-xs-12 col-md-4">
-          <h4>Responsável</h4>
+          <h4>Vendedor</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-value="cliente.codigo + (cliente.codigo?' - ':'') + cliente.nome" placeholder="Clique na lupa para buscar" readonly="true">
+            <input type="text" class="form-control" ng-value="emLote.filtro.vendedor.nome" placeholder="Clique na lupa para buscar" readonly="true">
             <span class="input-group-btn">
-                  <button class="btn btn-default" tabindex="-1" ng-click="removeCliente()"><span class="glyphicon glyphicon-remove"></span></button>
-                  <button class="btn btn-default" tabindex="-1" ng-click="buscarCliente()"><span class="glyphicon glyphicon-search"></span></button>
-                </span>
+              <button class="btn btn-default" tabindex="-1" ng-click="removeVendedor()"><span class="glyphicon glyphicon-remove"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="buscarVendedor()"><span class="glyphicon glyphicon-search"></span></button>
+            </span>
           </div>
         </div>
         <div class="col-md-2">
-          <h4>Data</h4>
-          <select name="" class="form-control">
-            <option value="">Cadastro</option>
-            <option value="">Último Parecer</option>
-          </select>
+          <h4>Status</h4>
+          <input type="text" class="form-control" placeholder="" readonly>
         </div>
         <div class="col-md-2">
           <h4>Inicial</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
+            <input type="text" class="form-control" ng-model="emLote.filtro.dataMin" ui-mask="99/99/9999" model-view-value="true" uib-datepicker-popup="dd/MM/yyyy" show-button-bar="false" is-open="abertoMin" datepicker-options="{showWeeks: false}">
             <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="emLote.filtro.dataMin = null"><span class="glyphicon glyphicon-remove"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="abertoMin = !abertoMin">
+                <span class="glyphicon glyphicon-calendar"></span>
+              </button>
             </span>
           </div>
         </div>
         <div class="col-md-2">
           <h4>Final</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
+            <input type="text" class="form-control" ng-model="emLote.filtro.dataMax" ui-mask="99/99/9999" model-view-value="true" uib-datepicker-popup="dd/MM/yyyy" show-button-bar="false" is-open="abertoMax" datepicker-options="{showWeeks: false}">
             <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="emLote.filtro.dataMax = null"><span class="glyphicon glyphicon-remove"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="abertoMax = !abertoMax">
+                <span class="glyphicon glyphicon-calendar"></span>
+              </button>
             </span>
           </div>
         </div>
         <div class="col-md-2">
           <h4>Valor mínimo</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="dtInicial" currency number-only model-view-value="true" keys-shortcuts enter="buscar()">
+            <input type="text" class="form-control" ng-model="emLote.filtro.valorMin" currency number-only model-view-value="true">
             <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="emLote.filtro.valorMin = null"><span class="glyphicon glyphicon-remove"></span></button>
             </span>
           </div>
         </div>
         <div class="col-md-2">
           <h4>Valor máximo</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="dtInicial" currency number-only model-view-value="true" keys-shortcuts enter="buscar()">
+            <input type="text" class="form-control" ng-model="emLote.filtro.valorMax" currency number-only model-view-value="true">
             <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="emLote.filtro.valorMax = null"><span class="glyphicon glyphicon-remove"></span></button>
             </span>
           </div>
         </div>
         <div class="col-md-2">
-          <h4>Status</h4>
-          <select name="" class="form-control" ng-model="filtros.status" ng-options="status.id as status.nome for status in followUp.statusArray"></select>
-        </div>
-      </div>
-      <div class="row condensar-rows">
-        <div class="col-sm-3 col-md-2 col-md-push-8">
           <h4>&nbsp;</h4>
-          <button class="btn btn-default btn-block"><span class="glyphicon glyphicon-remove"></span> Limpar filtros</button>
+          <button class="btn btn-default btn-block" ng-click="removeFiltros()"><span class="glyphicon glyphicon-remove"></span> Limpar filtros</button>
         </div>
-        <div class="col-sm-3 col-md-2 col-md-push-8">
+        <div class="col-md-2">
           <h4>&nbsp;</h4>
-          <button class="btn btn-default btn-block"><span class="glyphicon glyphicon-refresh"></span> Atualizar</button>
+          <button class="btn btn-default btn-block" ng-click="emLote.filtrar()"><span class="glyphicon glyphicon-refresh"></span> Atualizar</button>
         </div>
       </div>
     </div>
