--- a/app/partials/modalPagamento.html
+++ b/app/partials/modalPagamento.html
@@ -23,7 +23,7 @@
         </div>
         <div class="col-md-6">
           <div><h4>Modalidade</h4></div>
-          <input type="text" name="nome" ng-model="nmModalidade" ng-blur="blurNome()" readonly="true"
+          <input type="text" name="nome" ng-model="nmModalidade" ng-blur="blurNome()" readonly
                  class="form-control">
         </div>
         <div class="col-md-3">
