--- a/app/views/follow_up.html
+++ b/app/views/follow_up.html
@@ -149,7 +149,7 @@
             <td data-label="Data de cadastro">{{a.dataCadastro | date:'short'}}</td>
             <td class="hidden-xs"><a ng-href="#/atendimento/open?type=attendance&code={{a.codigo}}"><span class="glyphicon glyphicon-open-file"></span></a></td>
           </tr>
-          <tr class="hidden-xs" ng-repeat="n in getNumber(followUp.pagination.max - followUp.atendimentos.length) track by $index">
+          <tr class="hidden-xs" ng-repeat="n in getNumber(followUp.pagination.maxItems - followUp.atendimentos.length) track by $index">
             <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
@@ -167,6 +167,9 @@
     </div>
     <div class="legenda-status" ng-repeat="s in followUp.statusArray">
       <span class="glyphicon glyphicon-stop" ng-style="{color:s.cor}"></span>&nbsp;{{s.nome}}
+    </div>
+    <div class="paginas">
+      <ul uib-pagination total-items="pagination.total" ng-model="pagination.current" max-size="pagination.max" class="pagination-sm" boundary-link-numbers="true" rotate="true" force-ellipses="true" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
     </div>
   </div>
 
