--- a/app/views/atendimento.html
+++ b/app/views/atendimento.html
@@ -36,9 +36,9 @@
               <dd>{{atendimento.clientes}} cliente<span ng-if="atendimento.clientes > 1">s</span></dd>
               <dt>Total de Vendedores</dt>
               <dd>{{atendimento.vendedores}} vendedor<span ng-if="atendimento.vendedores > 1">es</span></dd>
-              <dt>Data Inicial:</dt>
+              <dt>Mais antigo:</dt>
               <dd>{{atendimento.min}}</dd>
-              <dt>Data Final:</dt>
+              <dt>Mais recente:</dt>
               <dd>{{atendimento.max}}</dd>
             </dl>
           </div>
