--- a/app/partials/dashboard/geral.html
+++ b/app/partials/dashboard/geral.html
@@ -1,45 +1,62 @@
 <div class="col-md-6">
   <div class="card">
     <div class="header">
-      <h3>Email</h3>
+      <h3>
+        Email
+        <span class="glyphicon glyphicon-ok-sign" style="color: lightgreen" ng-if="configuracoes.email.status === 'sucesso'"></span>
+        <span class="glyphicon glyphicon-exclamation-sign" style="color: gold" ng-if="configuracoes.email.status === 'testando'"></span>
+        <span class="glyphicon glyphicon-remove-sign" style="color: #ff6666;" ng-if="configuracoes.email.status === 'falha'"></span>
+      </h3>
     </div>
     <div class="clearfix">
 
       <div class="row condensar-rows">
         <div class="col-sm-8">
           <h4>Servidor de saída</h4>
-          <input type="text" class="form-control">
+          <input type="text" class="form-control" ng-model="configuracoes.email.host">
         </div>
         <div class="col-sm-4">
           <h4>Porta</h4>
-          <input type="text" class="form-control">
+          <input type="text" class="form-control" ng-model="configuracoes.email.porta">
         </div>
       </div>
 
       <div class="row condensar-rows">
         <div class="col-sm-6">
           <h4>Autenticação SMTP</h4>
-          <input type="text" class="form-control">
+          <div class="btn-group btn-toggle">
+            <label class="btn btn-default" ng-model="configuracoes.email.smtp" uib-btn-radio="true">Sim</label>
+            <label class="btn btn-default" ng-model="configuracoes.email.smtp" uib-btn-radio="false">Não</label>
+          </div>
         </div>
         <div class="col-sm-6">
           <h4>Nome do remetente</h4>
-          <input type="text" class="form-control" placeholder="Commercial">
+          <input type="text" class="form-control" placeholder="Ex. Commercial" ng-model="configuracoes.email.remetente">
         </div>
       </div>
 
       <div class="row condensar-rows">
         <div class="col-sm-6">
           <h4>Email</h4>
-          <input type="email" class="form-control">
+          <input type="email" class="form-control" ng-model="configuracoes.email.email">
         </div>
         <div class="col-sm-6">
           <h4>Senha</h4>
-          <input type="password" class="form-control">
+          <input type="password" class="form-control" ng-model="configuracoes.email.senha">
         </div>
       </div>
 
       <h4>&nbsp;</h4>
-      <button class="btn btn-default btn-lg pull-right"><span class="glyphicon glyphicon-floppy-save"></span> Salvar</button>
+      <div>
+        <span class="pull-left" ng-show="configuracoes.email.retorno">
+          <h5>
+            <span class="glyphicon glyphicon-info-sign"></span> {{configuracoes.email.retorno}}
+          </h5>
+        </span>
+
+        <button class="btn btn-default btn-lg pull-right" ng-click="configuracoes.testarEmail()"><span class="glyphicon glyphicon-transfer"></span> Testar</button>
+        <button class="btn btn-default btn-lg pull-right" ng-click="configuracoes.salvarEmail()" style="margin-right: 10px"><span class="glyphicon glyphicon-floppy-save"></span> Salvar</button>
+      </div>
     </div>
   </div>
 </div>
@@ -47,27 +64,40 @@
 <div class="col-md-6">
   <div class="card">
     <div class="header">
-      <h3>Conexão</h3>
+      <h3>
+        Conexão
+        <span class="glyphicon glyphicon-ok-sign" style="color: lightgreen" ng-if="configuracoes.conexao.status === 'sucesso'"></span>
+        <span class="glyphicon glyphicon-exclamation-sign" style="color: gold" ng-if="configuracoes.conexao.status === 'testando'"></span>
+        <span class="glyphicon glyphicon-remove-sign" style="color: #ff6666;" ng-if="configuracoes.conexao.status === 'falha'"></span>
+      </h3>
     </div>
     <div class="clearfix">
       <h4>Servidor</h4>
-      <input type="text" class="form-control">
+      <input type="text" class="form-control" ng-model="configuracoes.conexao.host">
       <h4>Base</h4>
-      <input type="text" class="form-control">
+      <input type="text" class="form-control" ng-model="configuracoes.conexao.database">
 
       <div class="row condensar-rows">
         <div class="col-sm-6">
           <h4>Usuário</h4>
-          <input type="text" class="form-control">
+          <input type="text" class="form-control" ng-model="configuracoes.conexao.usuario">
         </div>
         <div class="col-sm-6">
           <h4>Senha</h4>
-          <input type="password" class="form-control">
+          <input type="password" class="form-control" ng-model="configuracoes.conexao.senha">
         </div>
       </div>
 
       <h4>&nbsp;</h4>
-      <button class="btn btn-primary btn-lg pull-right"><span class="glyphicon glyphicon-transfer"></span> Testar conexão</button>
+      <div>
+        <span class="pull-left" ng-show="configuracoes.conexao.retorno">
+          <h5>
+            <span class="glyphicon glyphicon-info-sign"></span> {{configuracoes.conexao.retorno}}
+          </h5>
+        </span>
+        <button class="btn btn-default btn-lg pull-right" ng-click="configuracoes.testarConexao()"><span class="glyphicon glyphicon-transfer"></span> Testar</button>
+        <button class="btn btn-default btn-lg pull-right" ng-click="configuracoes.salvarConexao()" style="margin-right: 10px"><span class="glyphicon glyphicon-floppy-save"></span> Salvar</button>
+      </div>
     </div>
   </div>
 </div>
