--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -28,19 +28,19 @@
           <li class="dropdown">
             <a href="" class="dropdown-toggle" data-toggle="dropdown">
               <span class="glyphicon glyphicon-user"></span>
-              <strong>{{header.getCurrentUser().usuario}}</strong>
+              <strong class="hidden-sm">{{header.getCurrentUser().usuario}}</strong>
               <span class="glyphicon glyphicon-chevron-down"></span>
             </a>
             <ul class="dropdown-menu">
               <li>
                 <div class="navbar-login">
                   <div class="row">
-                    <div class="col-lg-4 hidden-xs">
+                    <div class="col-sm-4 hidden-xs">
                       <p class="text-center">
                         <span class="glyphicon glyphicon-user icon-size"></span>
                       </p>
                     </div>
-                    <div class="col-xs-8 col-xs-offset-2 col-lg-8 col-lg-offset-0">
+                    <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-0">
                       <p class="text-left"><strong>{{header.getCurrentUser().nome}}</strong></p>
                       <p class="text-left small">{{header.getCurrentUser().email}}</p>
                       <p class="text-center perfil">{{header.getCurrentUser().perfil}}</p>
@@ -55,12 +55,12 @@
               <li class="navbar-login-session-bg">
                 <div class="navbar-login navbar-login-session">
                   <div class="row">
-                    <div class="col-xs-8 col-xs-offset-2 col-lg-12 col-lg-offset-0">
+                    <div class="col-xs-8 col-xs-offset-2 col-sm-12 col-sm-offset-0">
                       <p>
                         <a href="" ng-click="header.abrirModalSenha()" class="btn btn-primary btn-block">Redefinir Senha</a>
                       </p>
                     </div>
-                    <div class="col-xs-8 col-xs-offset-2 col-lg-12 col-lg-offset-0">
+                    <div class="col-xs-8 col-xs-offset-2 col-sm-12 col-sm-offset-0">
                       <p>
                         <a href="#/logout" class="btn btn-danger btn-block">Logout</a>
                       </p>
