--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -17,7 +17,7 @@
   </div>
 
   <!--TITULO-->
-  <br>
+  <!--<br>-->
   <div class="row card">
     <div class="col-md-12">
       <div class="main-head" style="text-align: center">
@@ -32,22 +32,23 @@
       </div>
     </div>
     <!--<span uib-collapse="!orcamento.pedido.codigo">-->
-    <div class="col-sm-6 col-md-3">
+    <br class="visible-xs-block">
+    <div class="col-xs-6 col-md-3">
       <button class="btn btn-orcamento" ng-click="orcamento.limpar(true)"><span
-        class="glyphicon glyphicon-pencil"></span> Novo
+        class="glyphicon glyphicon-pencil hidden-xs"></span> Novo
       </button>
     </div>
-    <div class="col-sm-6 col-md-3">
-      <button class="btn btn-orcamento" ng-click="lista()"><span class="glyphicon glyphicon-list-alt"></span> Recuperar
+    <div class="col-xs-6 col-md-3">
+      <button class="btn btn-orcamento" ng-click="lista()"><span class="glyphicon glyphicon-list-alt hidden-xs"></span> Recuperar
       </button>
     </div>
-    <div class="col-sm-6 col-md-3">
+    <div class="col-xs-6 col-md-3">
       <button class="btn btn-orcamento" ng-click="orcamento.salvar()"><span
-        class="glyphicon glyphicon-floppy-save"></span> Salvar
+        class="glyphicon glyphicon-floppy-save hidden-xs"></span> Salvar
       </button>
     </div>
-    <div class="col-sm-6 col-md-3">
-      <button class="btn btn-orcamento" ng-click="orcamento.excluir()"><span class="glyphicon glyphicon-trash"></span>
+    <div class="col-xs-6 col-md-3">
+      <button class="btn btn-orcamento" ng-click="orcamento.excluir()"><span class="glyphicon glyphicon-trash hidden-xs"></span>
         Excluir
       </button>
     </div>
@@ -55,7 +56,7 @@
   </div>
 
   <!--VENDEDOR-->
-  <br class="hidden-xs">
+  <br>
   <div class="row card">
     <div id="form-vendedor" class="col-md-12" ng-init="formularios.vendedor = false"
          ng-click="formularios.vendedor = !formularios.vendedor; scrollTo($event);">
@@ -225,9 +226,9 @@
         </tbody>
       </table>
     </div>
-    <div class="col-xs-12 visible-xs-block well well-sm" uib-collapse="!formularios.produtos"
+    <div class="col-xs-12 visible-xs-block" uib-collapse="!formularios.produtos"
          ng-show="orcamento.pedido.items.length">
-      <div style="max-height: 300px;overflow-y: auto">
+      <div style="max-height: 300px;overflow-y: auto" class="well">
         <table class="tabela tabela-bordered tabela-esticada">
           <tbody>
           <tr ng-repeat="i in orcamento.pedido.items">
@@ -488,27 +489,27 @@
       </div>
     </div>
     <!--<span uib-collapse="!orcamento.pedido.codigo">-->
-    <div class="col-sm-6 col-md-3">
-      <button class="btn btn-orcamento" ng-click="orcamento.pagamento()"><span class="glyphicon glyphicon-credit-card"></span> Pagamento</button>
+    <div class="col-xs-6 col-md-3">
+      <button class="btn btn-orcamento" ng-click="orcamento.pagamento()"><span class="glyphicon glyphicon-credit-card hidden-xs"></span> Pagamento</button>
       <!--<button class="btn btn-orcamento" data-toggle="modal" data-target="#modalObs"><span-->
-        <!--class="glyphicon glyphicon-edit"></span> Observações-->
+        <!--class="glyphicon glyphicon-edit hidden-xs"></span> Observações-->
       <!--</button>-->
     </div>
-    <div class="col-sm-6 col-md-3">
+    <div class="col-xs-6 col-md-3">
       <button class="btn btn-orcamento" ng-click="orcamento.abrirAtendimento()"><span
-        class="glyphicon glyphicon-list-alt"></span> Atendimento
+        class="glyphicon glyphicon-list-alt hidden-xs"></span> Atendimento
       </button>
     </div>
-    <div class="col-sm-6 col-md-3">
-      <button class="btn btn-orcamento" ng-click="orcamento.enviar()"><span class="glyphicon glyphicon-envelope"></span>
+    <div class="col-xs-6 col-md-3">
+      <button class="btn btn-orcamento" ng-click="orcamento.enviar()"><span class="glyphicon glyphicon-envelope hidden-xs"></span>
         Email
       </button>
     </div>
-    <div class="col-sm-6 col-md-3">
-      <!--<button class="btn btn-orcamento" ng-click="orcamento.imprimir()"><span class="glyphicon glyphicon-print"></span>-->
+    <div class="col-xs-6 col-md-3">
+      <!--<button class="btn btn-orcamento" ng-click="orcamento.imprimir()"><span class="glyphicon glyphicon-print hidden-xs"></span>-->
       <!--Imprimir-->
       <!--</button>-->
-      <button class="btn btn-orcamento" ng-click="orcamento.exportar()"><span class="glyphicon glyphicon-share-alt"></span>
+      <button class="btn btn-orcamento" ng-click="orcamento.exportar()"><span class="glyphicon glyphicon-share-alt hidden-xs"></span>
         Exportar
       </button>
     </div>
